--- a/finite.tex
+++ b/finite.tex
@@ -13,6 +13,7 @@ still need to talk about closed and open subschemes, their basic properties
 
 
 \section{The context of a spectrum}\label{StableContextLecture}
+\citeme{Pridham's article \textit{Presenting higher stacks as simplicial schemes} seems like a good reference?  Maybe some Toen things are appropriate?  I don't really know where this simplicial scheme stuff is written down.}
 
 Today we will make good on our promise, made during our investigation of the unoriented bordism ring, to explain where the Adams spectral sequence comes from.  This story neatly divides into two parts, and the first half is just an investigation of how rich of an algebraic category $\CatOf{C}$ we can find that supports a factorization
 \begin{center}
@@ -21,32 +22,73 @@ Today we will make good on our promise, made during our investigation of the uno
 & \CatOf{C} \arrow{ru}.
 \end{tikzcd}
 \end{center}
-Our answer to this question will come out of considering Grothendieck's framework of descent.  Classically, descent concerns itself with a map $f: R \to S$ of a rings and an $S$--module $N$, and it asks the questions:
+Our answer to this question will come out of considering Grothendieck's framework of descent.  Classically, descent concerns itself with a map $f\co R \to S$ of a rings and an $S$--module $N$, and it asks questions like:
 \begin{itemize}
-\item (Naive:) When is there a module $M$ such that $N \cong M \otimes_R S$?
-\item (Nuanced:) What extra data can be placed on $N$, called \textit{descent data}, so that the category of descent data for $N$ is equivalent to the category of preimages of $N$ along $f_*$?
-\item (Needy:) What conditions can be placed on $f$ so that the category of descent data for any given module is always contractible?\todo{Change these silly N phrases.}
+\item When is there an $R$--module $M$ such that $N \cong M \otimes_R S = f^* M$?
+\item What extra data can be placed on $N$, called \textit{descent data}, so that the category of descent data for $N$ is equivalent to the category of preimages of $N$ along $f_*$?
+\item What conditions can be placed on $f$ so that the category of descent data for any given module is always contractible, called \textit{effectivity}?
 \end{itemize}
-The essential structure of these answers is easy to guess if we proceed by example: suppose that we begin instead with an $R$--module $M$ and we set $N = M \otimes_R S$.  We can 
 
+The essential structure of these answers is easy to guess if we proceed by example, using the few tools available to us.  Suppose that we begin instead with an $R$--module $M$ and we set $N = M \otimes_R S$.  By tensoring up, we have two $R$--algebra maps $S \to S \otimes_R S$, given by including along either factor, and we can further tensor $N$ up to $N \otimes_R S$ or $S \otimes_R N$.  Since $N$ came from the $R$--module $M$, these are canonically isomorphic: $((f \otimes 1) \circ f)^* M = ((1 \otimes f) \circ f)^* M$.  Repeating this process produces more isomorphisms which compose according to the triangle
+\begin{center}
+\begin{tikzcd}
+N \otimes_R S \otimes_R S \arrow{rr}{\simeq} \arrow{rd}{\simeq} & & S \otimes_R S \otimes_R N \\
+& S \otimes_R N \otimes_R S \arrow{ru}{\simeq}.
+\end{tikzcd}
+\end{center}
 
+\begin{definition}
+Let $f\co R \to S$ be a map of rings as above.  An $S$--module $N$ equipped with an isomorphism $S \otimes_R N \cong N \otimes_R S$ which causes the above triangle to commute is called a \textit{descent datum} for the map $f$.
+\end{definition}
 
+\begin{remark}\label{CanonicalCoring}
+There are other ways to view this data.  For example, later on we will revisit it from the categorical perspective of \textit{comonads}.  However, there is another perspective which we have already encountered earlier on: that of the \textit{canonical coring}.  Associated to the map $f\co R \to S$, we can form the ring $S \otimes_R S$, which supports a map \[B \otimes_A B \simeq B \otimes_A A \otimes_A B \to B \otimes_A B \otimes_A B \simeq (B \otimes_A B) \otimes_B (B \otimes_A B).\]  One can check that descent data on a $B$--module is the same as the data of a coaction against $B \otimes_A B$.  As a first step, notice the similarity of function signatures: \[N \xrightarrow{\psi} N \otimes_B (B \otimes_A B) \simeq N \otimes_A B.\]
+\end{remark}
 
-talk about quasicoherent sheaves over affine schemes
+The following theorem is the usual culmination of an initial investigation into descent:
+\begin{theorem}[Grothendieck]
+If $f\co R \to S$ is faithfully flat, then there is an equivalence of $R$--modules and $S$--modules equipped with descent data.
+\end{theorem}
+\begin{proof}[Jumping off point]
+The basic observation is that $0 \to R \to S \to S \otimes_R S$ is an exact sequence of $A$--modules.  This makes much of the homological algebra involved work out.
+\end{proof}
 
-talk about quasicoherent sheaves over simplicial affine schemes
+In our situation, this hypothesis will essentially never be satisfied, so we will pursue a less dramatic statement of the properties of descent.  To see what kind of theorem one might expect, consider the example of $f\co \Z \to \F_p$, which is neither faithful nor flat.  Then, consider the following list of problems (and their partial solutions):
+\begin{itemize}
+\item The tensor functor $f^*$ cannot distinguish even between the $\Z$--modules $\Z$ and $\Z/p$.  However, if we use $Lf^*$ and resolve $\Z/p$ as $\Z \xrightarrow{p} \Z$, the complexes $Lf^*(\Z)$ and $Lf^*(\Z/p)$ do look distinct.
+\item Once we pass to the derived category, then we are no longer in a situation where we can expect the single cocycle condition from the descent data above to suffice.  Instead, we can form a \text{simplicial scheme}, called the \textit{descent object}, by the formula
+\[\sheaf D_{\Z \to \F_p} := \left\{
+\begin{tikzcd}[ampersand replacement=\&]
+\Spec \F_p \arrow{r} \arrow[leftarrow,shift left=\baselineskip]{r} \arrow[leftarrow,shift right=\baselineskip]{r} \&
+\begin{array}{c} \Spec \F_p \\ \times_{\Spec \Z} \\ \Spec \F_p \end{array} \arrow[leftarrow, shift left=(2*\baselineskip)]{r} \arrow[shift left=\baselineskip]{r} \arrow[leftarrow]{r} \arrow[shift right=\baselineskip]{r} \arrow[leftarrow, shift right=(2*\baselineskip)]{r} \&
+\begin{array}{c} \Spec \F_p \\ \times_{\Spec \Z} \\ \Spec \F_p \\ \times_{\Spec \Z} \\ \Spec \F_p \end{array} \arrow[leftarrow, shift left=(3*\baselineskip)]{r} \arrow[shift left=(2*\baselineskip)]{r} \arrow[leftarrow, shift left=\baselineskip]{r} \arrow{r} \arrow[leftarrow, shift right=\baselineskip]{r} \arrow[shift right=(2*\baselineskip)]{r} \arrow[leftarrow, shift right=(3*\baselineskip)]{r} \&
+\cdots
+\end{tikzcd}
+\right\}.\]
+This is meant to look like the \v{C}ech nerve for the ``cover'' $\Spec \F_p \to \Spec \Z$.
+\item Accordingly, we need to update our notion of quasicoherent sheaf to live over a simplicial scheme~\cite[Tag 09VK]{stacks-project}.  Given a simplicial scheme $X$, a sheaf $\sheaf F$ on $X$ will be a sequence of sheaves $\sheaf F[n]$ on $X[n]$ as well as, for each map $\phi: [m] \to [n]$ in the simplicial indexing category inducing a map $X(\phi): X[n] \to X[m]$, a choice of map of sheaves \[\sheaf F(\phi)_* \co \sheaf F[m] \to X(\phi)_* \sheaf F[n].\]  Such a sheaf will be called \textit{quasicoherent} when it is levelwise quasicoherent.
+\item Finally, we can characterize the structure a quasicoherent sheaf over $\sheaf D_{\Z \to \F_p}$ receives when it is tensored down from $\Z$.  Such a sheaf enjoys that the adjoint map \[\sheaf F(\phi)^* \co X(\phi)^* \sheaf F[m] \to \sheaf F[n]\] is an isomorphism, and in this case we say that $\sheaf F$ is \textit{Cartesian}.
+\end{itemize}
 
-talk about the (Cech) simplicial scheme associated to descending along a cover
+\begin{lemma}\citeme{Hovey's \textit{Morita theory for Hopf algebroids and presheaves of groupoids}.}
+Without passing to the derived category, there is an equivalence of categories between Cartesian quasicoherent sheaves on the descent object and quasicoherent sheaves equipped with descent data. \qed
+\end{lemma}
 
-give an equivalence between comodules and cartesian qc sheaves over presheaves of groupoids
+The real utility of this framework is that it pulls apart the question of descent into two distinct pieces, summarized in the following theorem:
+\begin{theorem}
+Let $i\co A \to X$ be a closed subscheme, and consider the formal completion
+\begin{center}
+\begin{tikzcd}
+A \arrow{rr}{i} \arrow{rd}{j} & & X \\
+& X^\wedge_A. \arrow{ru}{k}
+\end{tikzcd}
+\end{center}
+If $X$ is Noetherian, then $k^*$ is flat as a functor of sheaves, $j^*$ is conservative as a functor in the derived category of sheaves, and there is an equivalence of derived categories of sheaves over $X^\wedge_A$ and sheaves over the descent object $\sheaf D_{A \to X}$.\todo{Surely you're supposed to be saying ``bounded'' sometimes when you talk about the derived category.} \qed
+\end{theorem}
 
-talk about how equivalence of groupoids induces equivalence of sheaf categories
-
-------
-
-\todo[inline]{I would like to put an example here for the composite map $\Z \to \Z^\wedge_p \to \Z/p$.  Without passing to the derived category, doing descent from $\Z$--modules to $\Z/p$--modules is obviously impossible, but I think that in the derived category descending an (honest) module from $\Z$ to descent data over $\Z/p$ is exactly enough information to reconstruct an (honest) module over $\Z^\wedge_p$.}
-
-------
+\begin{remark}\todo{Is this true? Ha, well, I hope so.}
+The usual theorem about faithfully flat descent then follows by using the hypotheses on $i$ to deduce that, e.g., if $i^*$ and $j^*$ are both conservative, then so must $k^*$ be.
+\end{remark}
 
 We now transfer what we've learned to the situation of homotopical algebra.  Recalling that spectra are equivalent to $\S$--modules, $\S$ the usual sphere spectrum, then any other ring spectrum comes equipped with a unit map $\eta: \S \to E$ and hence push and pull functors $\eta_*$ and $\eta^*$.  Correspondingly, to any spectrum $X$ we can define the following cosimplicial spectrum:
 \begin{definition}
@@ -66,14 +108,16 @@ It is not always the case that $X^\wedge_E$ can be lifted from a cosimplicial ob
 When $E$ is an $A_\infty$--ring spectrum, the descent object $X^\wedge_E$ can be naturally considered cosimplicial object in the $\infty$--category of spectra. \qed \todo{I don't intend to prove this, but maybe we could say some mealy words about why it's true. At worst, we could give reference to the relevant part of Higher Algebra.}
 \end{lemma}
 \begin{definition}
-Let $E$ be an $A_\infty$--ring spectrum.  Then $X^\wedge_E := \Tot \sheaf D_E(X)$ is called the \textit{$E$--nilpotent completion of $X$}.
+Let $E$ be an $A_\infty$--ring spectrum.  Then $X^\wedge_E := \Tot \sheaf D_E(X)$ is called the \textit{$E$--nilpotent completion of $X$}.  The spectral sequence resulting from the coskeletal filtration is called the \textit{$E$--Adams spectral sequence} (for $X$).
 \end{definition}
 
-
-
-talk about when the nilpotent completion can be expected to agree with the original spectrum.  (you can probably even prove this.)  talk also about when the nilpotent completion agrees with the Bousfield localization.  (you can't prove this.)
-
---------
+In general, it's quite rare that the $E$--nilpotent completion of a spectrum $X$ recovers $X$, but in the nice cases we typically work in, it has been known to happen.  In particular, there is the following theorem:
+\begin{lemma}\citeme{Ravenel's \textit{Localizations w/r/t ...} paper}
+Let $E$ be a connective $A_\infty$ ring spectrum and let $X$ be any connective spectrum.  Then $X^\wedge_E$ is equivalent to the ``$\pi_0 E$--localization'' of $X$, i.e., for a prime $p$ the spectrum $X^\wedge_E$ is $p$--local if $\pi_0 E$ is $p$--local, it is $p$--complete if $\pi_0 E$ is $p$--torsion, and otherwise it is just $X$. \qed
+\end{lemma}
+\begin{proof}[Proof sketch]
+\todo{You really can just look at the Adams tower...}
+\end{proof}
 
 Finally, we can compare the topological situation with the algebraic situation.  To have any hope of applying algebra and algebraic geometry, we must impose some nicety properties.  Here is the first:
 
@@ -113,66 +157,33 @@ For a ring spectrum $E$ satisfying {\CH} and input spectrum $X$, we define the f
 The $j$\th object is a module for $\sheaf{O}(\context{E}[j])$, and hence determines a quasicoherent sheaf over the scheme $\context{E}[j]$.  Suitably interpreted, the maps of abelian groups determine maps of pushforwards so that $\context{E}(X)$ is a quasicoherent sheaf over the simplicial scheme $\context{E}$.
 \end{definition}
 
-\begin{remark}
-All of the coface and codegeneracy maps in $\context{E}(X)$ are induced by the unit map $\S \to E$ and the multiplication map $E \sm E \to E$.  In particular, $X$ is not involved.
-\end{remark}
-
-
--------
-
-flatness hypothesis
-
+There is also a common hypothesis on $E$ that brings us back into the world of coalgebra, down from simplicial schemes.
 \begin{definition}
-Take $E_* E$ to be an $E_*$--module using the left-unit map.  We will say that $E$ satisfies \FH, the \textbf Flatness \textbf Hypothesis, when the right-unit map $E_* \to E_* E$ is a flat map of $E_*$--modules.\todo{Explain {\FH} in terms of a Kunneth spectral sequence.}
+Take $E_* E$ to be an $E_*$--module using the left-unit map.  We will say that $E$ satisfies \FH, the \textbf Flatness \textbf Hypothesis, when the right-unit map $E_* \to E_* E$ is a flat map of $E_*$--modules.\footnote{The essential point of this is that it causes $E_* E \otimes_{E_*} E_* X$ to become a homology theory and $E_* E \otimes_{E_*} E_* X \to (E \sm E)_* X$ to become an isomorphism on a point.  Alternatively, this can be viewed as a degeneration condition on the K\"unneth spectral sequence for $E_* (E \sm E)$.}
 \end{definition}
 
-Give examples: $H\F_2$, for instance.
+\begin{remark}
+The main utility of this is that it obviates us from working through the homological algebra of sheaves over simplicial schemes.  Instead, since {\FH} causes $\context{E}$ to become $1$--truncated, we can refer to \Cref{CanonicalCoring} and simply refer back to the homological algebra of comodules.  In light of the discussion in \Cref{HopfAlgebrasFromFiniteGroups,HF2HomologyIsValuedInAutGaEquivarModules}, we also see an interpretation of these groupoid-valued simplicial schemes: they are valued in sheaves equipped with an action by $\Spec E_* E$, which acts also on the base $\Spec E_*$.  To denote this homotopical quotient, we will write \[\Spec E_* \mmod \Spec E_* E.\]
+\end{remark}
 
+\begin{remark}\todo{Is this right?  I think so...}
+There is a notion of quasicoherent sheaf directly over $\sheaf D_E$ and an interpretation of Cartesian sheaves in that setting.  A different view on {\FH} is that it causes the functor $\pi_*$ to preserve Cartesianness.
+\end{remark}
 
-
----------
-
-You haven't actually talked about the Adams spectral sequence yet.
-
-cohomology of sheaves on simplicial schemes
+\begin{example}
+Most of the homology theories we will discuss have this property.  For an easy example, $H\F_2$ certainly has this property: there is only one possible algebraic map $\F_2 \to \mathcal A_*$, so {\FH} is necessarily satisfied.  This grants us access to a description of the context for $H\F_2$: \[\context{H\F_2} = \Spec F_2 \mmod \InternalAut{\G_a}.\]
+\end{example}
 
 
 ----------
 
 
-\citeme{Pridham's article \textit{Presenting higher stacks as simplicial schemes} seems like a good reference?  Maybe some Toen things are appropriate?  I don't really know where this simplicial scheme stuff is written down.}
-
-
-Sheaves on simplicial schemes, cohomology of sheaves
-
-Since $E$--homology is valued in $E_*$--modules, which by \Cref{QCohDefinition} are also known as quasicoherent sheaves over $\Spec E_*$, we are prompted to recall the following definitions:
-\begin{definition}
-%\todo{I'd be much happier not citing the stacks project.}
-Let $X$ be a simplicial object in affine schemes and let $\sheaf F[n]$ be a quasicoherent sheaf on $X[n]$.\footnote{This is a slight abuse of notation: $\sheaf F[n]$ is not the $n$\th level of a simplicial object.}
-\begin{enumerate}
-\item $\sheaf F$ is collectively called a sheaf~\cite[Tag 09VK]{stacks-project} on $X$ when each map $\phi: [m] \to [n]$ inducing a map $X(\phi): X[n] \to X[m]$ naturally induces a sheaf map \[\sheaf F(\phi)_* \co \sheaf F[m] \to X(\phi)_* \sheaf F[n].\]
-\item $\sheaf F$ is called quasicoherent~\cite[Tag 07TF]{stacks-project} when it is comprised levelwise of quasicoherent sheaves.
-\item $\sheaf F$ is called Cartesian quasicoherent~\cite[Tag 07TF]{stacks-project} when it is quasicoherent and the adjoint map \[\sheaf F(\phi)^* \co X(\phi)^* \sheaf F[m] \to \sheaf F[n]\] is an isomorphism.
-\end{enumerate}
-\end{definition}
-
-
-
 (Basic properties of simplicial schemes: flat and closed maps?)
 
-
-
-
-Deeper natural equivalence: stackification and locality
-
-Mention that complex orientations cause $\context{MU}(E)$ to degenerate, so that stackiness of $\context{MU}(E)$ is a measure of the failure of orientability.  Mention also Wood's cofiber sequence?  Talk about Hopkins's stacky pullback theorem from his Talbot lecture?
-
-Hovey's \textit{Morita theory for Hopf algebroids and presheaves of groupoids} has nice proofs of various utility theorems, like the homotopy invariance of sheaf categories or the equivalence between comodules and (Cartesian) quasicoherent sheaves over sheaves of groupoids (in the trivial topology).  It would be good to draw a finer distinction than he does: the Adams descent object always exists, and it always yields a quasicoherent sheaf which is only sometimes Cartesian.
-
-I think you can make sense of ``Cartesian'' directly on $\sheaf D_E(X)$, and that such sheaves should be Cartesian over $\sheaf D_E$.  You'd then want to remark that $\pi_*$ preserves Cartesian-ness exactly when just that one morphism is Cartesian; then everything else follows.  That's a pretty cool result, all told.
-
+talk about how equivalence of groupoids induces equivalence of sheaf categories.  also, a deeper natural equivalence: stackification and locality.
 
 \todo{I suspect you'll have time to move the ``upcoming program'' sketch scheduled for the beginning of the next lecture into the end of this one.  I think that's better narration anyhow.}
+\todo{Jon thinks that this picture can be instructively recast in terms of the cotangent complex.  I'm not sure how, but it's something to keep in mind for later.}
 
 
 
@@ -766,5 +777,7 @@ In the case $d = 1$, $\operatorname{Aut}(\Gamma_1) = \Z_p^\times$ and it acts on
 
 
 \oldsection*{Stuff that might belong in this chapter}
+
+Mention that complex orientations cause $\context{MU}(E)$ to degenerate, so that stackiness of $\context{MU}(E)$ is a measure of the failure of orientability.  Mention also Wood's cofiber sequence?  Talk about Hopkins's stacky pullback theorem from his Talbot lecture?  I think we can only do this \emph{after} Quillen's theorem has been proven, though it only really fits conceptually into the lecture on contexts.
 
 Achim's nice proof of Hopf invariant 1?  The $E(1)$ version?  Ravenel's very odd proof of the Kervaire problem?
