--- a/mo.tex
+++ b/mo.tex
@@ -410,13 +410,13 @@ Resolve $N$ using the cofree modules described above, then apply either functor 
 
 \todo{Put a better base-change theorem here, like $- \cotensor_A B$.}
 
-\begin{example}
+\begin{example}\label{HopfAlgebrasFromFiniteGroups}
 Let's contextualize this somewhat.  Given a finite group $G$, we can form a commutative Hopf algebra $k^G$, the $k$--valued functions on $G$.  This Hopf algebra is dual to the Hopf algebra $k[G]$, the group--algebra on $G$.  It is classical that a $G$--module $M$ is equivalent data to a $k[G]$--module structure, and if $M$ is suitably finite, we can dualize the action map to produce a coaction map \[M^* \to k^G \otimes M^*.\]  Additionally, we have $M^* \cotensor_{k^G} N^* = (M \otimes_G N)^*$, so that $M^* \cotensor_{k^G} k = (H^0 M)^*$.
 \end{example}
 
 \todo{$\mathcal A(1)_*$ is the Hopf algebra for a dihedral group. Is this example appropriate here?}
 
-\begin{example}
+\begin{example}\label{HF2HomologyIsValuedInAutGaEquivarModules}
 In the previous lecture, we identified $\mathcal A_*$ with the ring of functions on the group scheme $\InternalAut(\G_a)$.  Today's punchline is that this is analogous to the example above: $\Cotor_{\mathcal A_*}(\F_2, H\F_{2*} X)$ computes the derived fixed points of $G = \InternalAut(\G_a)$ on the $G$--module $H\F_{2*} X$.
 \end{example}
 
