dorin asked a question i couldn’t answer

--- a/intro.tex
+++ b/intro.tex
@@ -38,7 +38,7 @@ where $\phi$ is the orientation map.  Altogether, this composite gives us an ele
 The integer obtained by the above process is $\int_M \omega$. \qed
 \end{lemma}
 
-\noindent This definition of $\int_M \omega$ via stable homotopy theory is pretty nice, in the sense that many theorems accompany it for free.  For instance, the relation ``$\sim$'' automatically imposes a Stokes' theorem on it.
+\noindent This definition of $\int_M \omega$ via stable homotopy theory is pretty nice, in the sense that many theorems accompany it for free.  For instance, the relation ``$\sim$'' automatically imposes a Stokes' theorem on it.\todo{I thought I knew how this worked, but now I'm not so sure.  How does this work?}
 
 Now take $X = e$ to be the trivial structure group, so that Pontryagin--Thom gives an equivalence $Me \xrightarrow{\simeq} \S$.  It is thus possible (and some people have indeed taken up this viewpoint) that stable homotopy theory can be done solely through the lens of ``framed bordism'', i.e., the bordism theory of manifolds equipped with trivializations of their tangent bundles.  We will prefer to view this the other way: the sphere spectrum $\S$ often appears for us as a natural object, and we will occasionally replace it by $Me$, the framed bordism spectrum.  For example, given a ring spectrum $E$ with unit map $\S \to E$, we can reconsider this as a ring map $\S = Me \to E$.  Following along the lines of the previous paragraph, we learn that any ring spectrum $E$ is automatically equipped with a theory of integration for framed manifolds.
 
