some last minute modifications to Lecture 1.2

--- a/main.tex
+++ b/main.tex
@@ -134,7 +134,7 @@
 \DeclareMathOperator{\Spec}{Spec}
 \DeclareMathOperator{\Spf}{Spf}
 \DeclareMathOperator{\Sch}{Sch}
-\DeclareMathOperator{\colim}{colim}
+\DeclareMathOperator*{\colim}{colim}
 \DeclareMathOperator{\End}{End}
 \DeclareMathOperator{\Div}{Div}
 \DeclareMathOperator{\SDiv}{SDiv}
