--- a/mo.tex
+++ b/mo.tex
@@ -166,7 +166,7 @@ As presented above, the multiplicative group comes with a natural inclusion $\ma
 
 Additionally, the colimit of the sets $\colim_{n \to \infty} \mathbb A^{1,(n)}(T)$ is of use in algebra: it is the collection of nilpotent elements in $T$.  These kinds of conditions which are ``unbounded in $n$'' appear frequently enough that we are moved to give these functors a name too:
 \begin{definition}
-An \textit{affine formal scheme} is an ind-system of finite affine schemes.  The morphisms between such schemes are computed by \[\CatOf{FormalSchemes}(\{X_\alpha\}, \{Y_\beta\}) = \lim_\beta \colim_\alpha \CatOf{Schemes}(X_\alpha, Y_\beta).\]
+An \textit{affine formal scheme} is an ind-system of finite affine schemes.  \todo{Several people had questions about the utility of this. Does it just add certain colimits to the category of \emph{finite} affine schemes?}  The morphisms between such schemes are computed by \[\CatOf{FormalSchemes}(\{X_\alpha\}, \{Y_\beta\}) = \lim_\beta \colim_\alpha \CatOf{Schemes}(X_\alpha, Y_\beta).\]
 \end{definition}
 
 \begin{example}\label{FormalGaExample}
@@ -174,7 +174,7 @@ The individual schemes $\mathbb A^{1, (n)}$ do not support group structures.  Af
 \end{example}
 
 \begin{example}
-Similarly, one can define the scheme $\Gm[n]$ of elements of unipotent order $n$: \[\Gm[n] = \Spec \frac{\F_2[x,y]}{(xy - 1, x^n - 1)} \subseteq \Gm.\]  These \emph{are} all group schemes, but there is a second filtration along the lines of the one considered above: \[\Gm^{(n)} = \Spec \frac{\F_2[x,y]}{(xy - 1, (x - 1)^n)}.\]  The reader is invited\todo{Never invite the reader to do anything.} to check that there is an isomorphism $\{\Gm[n]\} \cong \{\Gm^{(n)}\}$ of formal schemes over $\F_2$, and that the induced formal group scheme structure on the right-hand side cannot be written level-wise --- rather, it involves the entire ind-scheme.
+Similarly, one can define the scheme $\Gm[n]$ of elements of unipotent order $n$: \[\Gm[n] = \Spec \frac{\F_2[x,y]}{(xy - 1, x^n - 1)} \subseteq \Gm.\]  These \emph{are} all group schemes, but there is a second filtration along the lines of the one considered above: \[\Gm^{(n)} = \Spec \frac{\F_2[x,y]}{(xy - 1, (x - 1)^n)}.\]  These schemes are only occasionally group schemes.  The reader is invited\todo{Never invite the reader to do anything.} to check that there is an isomorphism $\{\Gm[n]\} \cong \{\Gm^{(n)}\}$ of formal schemes over $\F_2$, and that the induced formal group scheme structure on the right-hand side cannot be written level-wise --- rather, it involves the entire ind-scheme.\todo{Someone was interested in the relationship of this to the punctured formal scheme $\F_p(\!(q)\!)$.}
 \end{example}
 
 Let's now consider the example that we closed with last time, where we calculated $H\F_2^*(\RP^n) = \F_2[x] / (x^{n+1})$.  Putting ``$\Spec$'' in front of this, we could reinterpret this calculation as \[\Spec H\F_2^*(\RP^n) \cong \mathbb A^{1, (n)}.\]  This is such a useful thing to do that we will give it a notation all of its own:
