--- a/intro.tex
+++ b/intro.tex
@@ -18,7 +18,7 @@ To begin, we will define a homology theory called ``bordism homology''.  Recall 
 This forms a chain complex of monoids under direct sum of manifolds, ands it homology is written $MO_*(X)$.  These are naturally abelian groups, and moreover they satisfy the axioms of a generalized homology theory. \qed
 \end{lemma}
 
-In fact, we can define a bordism theory $MX$ for any suitable family of structure groups $X_n \to O(n)$.  The coefficient ring of $MX$, or its value $MX_*(*)$ on a point, gives the ring of $X$--bordism classes, and generally $MX_*(Y)$ of some space $Y$ gives a kind of ``bordism in families (over $Y$)''.  There are evident comparison morphisms for the most ordinary kinds of bordism, given by replacing a chain of manifolds with an equivalent simplicial chain: \[MO \to H\Z/2, \quad MSO \to H\Z.\] In both cases, we can evaluate on a point to get ring maps $MO_*(*) \to \Z/2$ and $MSO_*(*) \to \Z$, called ``genera'' --- neither of which is very interesting, since they're both zero in positive degrees.\todo{A comparison of this with the usual spectrum definition of $MX$ appears in Switzer 12.35.}
+\todo{dshi: I'm confused about this paragraph. What is $X$ here? A sequence of groups? How does $O(n)$ relate to the $MO$ story above? 10min later: So $X$ is a structure group. There is a potential for confusion here cuz $X$ is a space above. Can you explain this part of the story to me (again) at office hours on Tuesday.} In fact, we can define a bordism theory $MX$ for any suitable family of structure groups $X_n \to O(n)$.  The coefficient ring of $MX$, or its value $MX_*(*)$ on a point, gives the ring of $X$--bordism classes, and generally $MX_*(Y)$ of some space $Y$ gives a kind of ``bordism in families (over $Y$)''.  There are evident comparison morphisms for the most ordinary kinds of bordism, given by replacing a chain of manifolds with an equivalent simplicial chain:\todo{dshi:I don't follow here. How does this replacement go explicitly? Somehow I understood it when you explained this to me in person but now I don't see it anymore.} \[MO \to H\Z/2, \quad MSO \to H\Z.\] In both cases, we can evaluate on a point to get ring maps $MO_*(*) \to \Z/2$ and $MSO_*(*) \to \Z$, called ``genera'' --- neither of which is very interesting, since they're both zero in positive degrees.\todo{A comparison of this with the usual spectrum definition of $MX$ appears in Switzer 12.35.}
 
 However, having maps of homology theories (rather than just maps of coefficient rings) is considerably more data then just the genus.  In fact, we can extact a theory of integration.  Consider the following special case of oriented bordism, where we evaluate $MSO_*$ on an infinite loopspace:
 \begin{align*}
@@ -40,15 +40,16 @@ The integer obtained by the above process is $\int_M \omega$. \qed
 
 \noindent This definition of $\int_M \omega$ via stable homotopy theory is pretty nice, in the sense that many theorems accompany it for free.  For instance, the relation ``$\sim$'' automatically imposes a Stokes' theorem on it.\todo{I thought I knew how this worked, but now I'm not so sure.  How does this work?}
 
-Now take $X = e$ to be the trivial structure group, which is the bordism theory of manifolds with trivialized tangent bundle.  In this case, the Pontryagin--Thom gives an equivalence $Me \xrightarrow{\simeq} \S$.  It is thus possible (and some people have indeed taken up this viewpoint) that stable homotopy theory can be done solely through the lens of ``framed bordism''.  We will prefer to view this the other way: the sphere spectrum $\S$ often appears for us as a natural object, and we will occasionally replace it by $Me$, the framed bordism spectrum.  For example, given a ring spectrum $E$ with unit map $\S \to E$, we can reconsider this as a ring map $\S = Me \to E$.  Following along the lines of the previous paragraph, we learn that any ring spectrum $E$ is automatically equipped with a theory of integration for framed manifolds.
+Now take $X = e$ to be the trivial structure group, which is the bordism theory of manifolds with trivialized tangent bundle.  In this case, the Pontryagin--Thom construction gives an equivalence $Me \xrightarrow{\simeq} \S$.  It is thus possible (and some people have indeed taken up this viewpoint) that stable homotopy theory can be done solely through the lens of ``framed bordism''.  We will prefer to view this the other way: the sphere spectrum $\S$ often appears to us as a natural object, and we will occasionally replace it by $Me$, the framed bordism spectrum.  For example, given a ring spectrum $E$ with unit map $\S \to E$, we can reconsider this as a ring map $\S = Me \to E$.  Following along the lines of the previous paragraph, we learn that any ring spectrum $E$ is automatically equipped with a theory of integration for framed manifolds.
 
-Sometimes, as in the examples above, this unit map factors: \[\S = Me \to MO \to H\Z/2.\]  This is a witness to the overdeterminacy of $H\Z/2$'s integral for framed bordism: if the framed manifold is pushed all the way down to an unoriented manifold, there is still enough residual data to define the integral.  For a generic ring spectrum $E$, we can ask the analogous question: filtering $O$ by systems of structure groups, what stage does the unit map $Me \to E$ factor through?  For instance, the map \[\S = Me \to MSO \to H\Z\] considered above does \emph{not} factor further through $MO$ --- an orientation is \emph{required} to define the integral of an integer--valued cohomology class.  More generally, the map $SO \to O$ is the beginning of the Postnikov filtration of $O$, and we now present a diagram of this filtration and some interesting integration theories related to it:
+Sometimes, as in the examples above, this unit map factors: \[\S = Me \to MO \to H\Z/2.\]  This is a witness to the overdeterminacy of $H\Z/2$'s integral for framed bordism: if the framed manifold is pushed all the way down to an unoriented manifold, there is still enough residual data to define the integral.  Given any ring spectrum $E$, we can ask the analogous question: If we filter $O$ by a system of structure groups, at what stage does the unit map $Me \to E$ factor through?  For instance, the map \[\S = Me \to MSO \to H\Z\] considered above does \emph{not} factor further through $MO$ --- an orientation is \emph{required} to define the integral of an integer--valued cohomology class.  In the more general case, the map $SO \to O$ is the beginning of the Postnikov filtration of $O$, \todo{danny: do you mean postnikov filtration for $MO$? I asked this in class but I think it's good to say how does the filtration go. The classical postnikov filtration for $X$ builds the homotopy groups of $X$ up from the bottom, to get a sequence $\cdots \to X_2 \to X_1 \to X_0$, with $X$ the limit. I think the situation here is the opposite? We'll talk about this.} and we now present a diagram of this filtration and some interesting integration theories related to it:
 \begin{center}
 \begin{tikzcd}
 Me \arrow{r} \arrow{rrd} \arrow{rrrd} \arrow{rrrrd} & \cdots \arrow{r} & M\Spin \arrow{r} \arrow[crossing over]{d} & MSO \arrow{r} \arrow[crossing over]{d} & MO \arrow[crossing over]{d} \\
 & & kO & H\Z & H\Z/2.
 \end{tikzcd}
 \end{center}
+\todo{Given that you mentioned string in the theorem below.  Might wanna add string into the diagram}
 
 This is the situation homotopy theorists found themselves in some decades ago, when Ochanine and Witten proved the following mysterious theorem using analytical and physical methods:
 
@@ -74,7 +75,7 @@ Leaving aside the extension problem for the moment, their main theorem is the fo
 For $E$ an even--periodic cohomology theory, \[\Spec E_* MU[6, \infty) \cong C^3(\G_E; \sheaf I(0)),\] where ``$C^3(\G_E; \sheaf I(0))$'' is a certain scheme.  When $E$ is taken to be elliptic, so that there is a specified isomorphism $\G_E \cong C^\wedge_0$ for $C$ an elliptic curve, the theory of elliptic curves furnishes the scheme with a canonical point.  Hence, there is a preferred class $MU[6, \infty) \to E$, natural in the choice of elliptic $E$. \qed
 \end{theorem}
 
-\noindent Our real goal is to understand theorems like this last one, where algebraic geometry asserts some real control over something in the domain of homotopy theory.  The structure of the class will be to work through a sequence of case studies where this perspective shines through most brightly.  We'll start by working through Thom's calculation of the homotopy of $MO$, which simultaneously holds the attractive features of being free of technical complexity while revealing essentially all of the structural complexity.  Having seen that through to the end, we'll then venture on to other examples: the complex bordism ring, structure theorems for finite spectra, unstable cooperations, and, finally, the theorem above and its extensions.  The overriding theme of the class will be that algebraic geometry is a good organizing principle that gives us one avenue of insight into how homotopy theory functions.  In particular, it will give us a means to organize ``operations'' of various sorts between spectra derived from bordism theories.
+\noindent Our real goal is to understand theorems like this last one, where algebraic geometry asserts some real control over something in the domain of homotopy theory.  The structure of the class will be to work through a sequence of case studies where this perspective shines through most brightly.  We'll start by working through Thom's calculation of the homotopy of $MO$, which simultaneously holds the attractive features of being free of technical complexity while revealing essentially all of the structural complexity.  Having seen that through to the end, we'll then venture on to other examples: the complex bordism ring, structure theorems for finite spectra, unstable cooperations, and, finally, the theorem above and its extensions.  The overriding theme of the class will be that algebraic geometry is a good organizing principle that gives us one avenue of insight into how homotopy theory functions.  In particular, it allows us to organize ``operations'' of various sorts between spectra derived from bordism theories.
 
 We should also mention that we will specifically \emph{not} discuss the following aspects of this story:
 \begin{itemize}
