Proof of lemma 1.2.4.

--- a/mo.tex
+++ b/mo.tex
@@ -137,6 +137,14 @@ We can also express in this language another common object arising from algebrai
 \begin{lemma}
 For a Hopf $\F_2$--algebra $R$, the functor $\Spec R$ is naturally valued in groups.  Such functors are called \textit{group schemes}.  Conversely, a choice of group structure on $\Spec R$ endows $R$ with the structure of a Hopf algebra. \todo{Maybe write this out, if you're going to be using this equivalence all semester.} \qed
 \end{lemma}
+\begin{proof}
+The functor $\Spec \colon \CatOf{Algebras}_{\F_2 /}^{\mathrm{op}} \to \mathrm{Funct}(\CatOf{Algebras}_{\F_2 /}, \CatOf{Sets})$ takes limits into limits.
+Since tensor products of $\F_2$-algebras compute pushouts in $\CatOf{Algebras}_{\F_2 /}$, we see that Hopf algebras are simply cogroup objects in $\CatOf{Algebras}_{\F_2 /}$.
+These remarks imply that $\Spec$ takes Hopf algebras into group objects in $\mathrm{Funct}(\CatOf{Algebras}_{\F_2 /}, \CatOf{Sets})$.
+Now, for any small category $\cal{C}$, one has
+\[ \mathrm{Grp}( \mathrm{Funct}(\cal{C}, \CatOf{Sets}) ) \simeq \mathrm{Funct}(\cal{C}, \CatOf{Groups}). \]
+The conclusion now follows from the fully faithfulness of $\Spec$.
+\end{proof}
 
 \begin{example}\label{InformalAdditiveGroupExample}
 The functor $\mathbb A^1$ introduced above is naturally valued in groups: since $\mathbb A^1(T) \cong T$, we can use the addition on $T$ to make it into an abelian group.  When considering $\mathbb A^1$ with this group scheme structure, we notate it as $\mathbb G_a$.  Applying the Yoneda lemma, one deduces the following formulas for the Hopf algebra structure maps:
