Corrected a spelling mistake that was preventing from compiling.

--- a/mo.tex
+++ b/mo.tex
@@ -26,7 +26,7 @@ If $\xi = S^{n-1} \times X$ is the trivial bundle, then $T(\xi) = S^n \sm (X_+)$
 Let $\xi$ be the tautological $S^0$--bundle over $\RP^\infty = BO(1)$.  Because $\xi$ has contractible total space, $EO(1)$, the cofiber degenerates and it follows that $T(\xi) = \RP^\infty$. More generally, arguing by cells shows that the Thom space for the tautological bundle over $\RP^n$ is $\RP^{n+1}$.
 \end{example}
 
-Now we catalog a bunch of useful properties of the Thom space functor. Firstly, recall that a spherical bundle over $X$ is the same data as a map $X \to B \GL_1 S^{n-1}$, where $\GL_1 S^{n-1}$ is the subspace of $F(S^{n-1}, S^{n-1})$ expressed by the pullback\todo{In lecture, you decided to call these $B h\operatorname{Aut}(S^{n-1})$, which is maybe a healthier choice?} \todo{does this mean we are regarding $h\operatorname{Aut}(S^{n-1})$ as a group? Is $\operatorname{Aut}(S^{n-1})$ a topological group? Would it make sense to say $B \opreatorname{Aut}(S^{n-1})$? To be honest I personally like $GL_1S^n$. It might cause some potential for confusion but it looks more clean. - danny)
+Now we catalog a bunch of useful properties of the Thom space functor. Firstly, recall that a spherical bundle over $X$ is the same data as a map $X \to B \GL_1 S^{n-1}$, where $\GL_1 S^{n-1}$ is the subspace of $F(S^{n-1}, S^{n-1})$ expressed by the pullback\todo{In lecture, you decided to call these $B h\operatorname{Aut}(S^{n-1})$, which is maybe a healthier choice?} \todo{does this mean we are regarding $h\operatorname{Aut}(S^{n-1})$ as a group? Is $\operatorname{Aut}(S^{n-1})$ a topological group? Would it make sense to say $B \operatorname{Aut}(S^{n-1})$? To be honest I personally like $GL_1S^n$. It might cause some potential for confusion but it looks more clean. - danny}
 \begin{center}
 \begin{tikzcd}
 \GL_1 S^{n-1} \arrow{r} \arrow{d} & F(S^{n-1}, S^{n-1}) \arrow{d} \\
@@ -628,7 +628,7 @@ Note that $f_2$ gives a point $f_2 \in \InternalAut_1(\G_a)(R)$, so we can de-sc
 $\pi_* MO = \F_2[b_j \mid j \ne 2^k - 1, j \ge 1]$ with $|b_j| = j$.
 \end{corollary}
 \begin{proof}
-Set $M = \F_2[b_j \mid j \ne 2^k - 1]$.  \todo{Compare this with the base change theorems from the previous day.}  It follows from the above that the $\InternalAut_1(\G_a)$--cohomology of $H\F_2P_0(MO)$ has amplitude $0$:\todo{Maybe you should justify the step that looks like reassociation of the tensor and cotensor products. You almost definitely proved this on the previous day.}
+Set $M = \F_2[b_j \mid j \ne 2^k - 1]$.  \todo{Compare this with the base change theorems from the previous day.} It follows from the above that the $\InternalAut_1(\G_a)$--cohomology of $H\F_2P_0(MO)$ has amplitude $0$:\todo{Maybe you should justify the step that looks like reassociation of the tensor and cotensor products. You almost definitely proved this on the previous day.}
 \begin{align*}
 \Cotor_{\mathcal A_*}^{*, *}(\F_2, H\F_2P_0(MO)) & = \Cotor_{\mathcal A_*}^{*, *}(\F_2, \mathcal A_* \otimes_{\F_2} M) \\
 & = \F_2 \cotensor_{\mathcal A_*} (\mathcal A_* \otimes_{\F_2} M) \\
